--- a/index.html
+++ b/index.html
@@ -20,5 +20,12 @@
             <a href="#" alt="macolm-esque" class="half malcolm-esque">Malcolm-esque</a>
         </div>
     </section>
+    <section class="about-me">
+        <img id="ya-boy" src="./assets/images/ya-boy.jpg" alt="Dustin" />
+        <article>
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam, sapiente. Possimus, sit similique! Itaque soluta accusamus distinctio dolore nemo, sint tempore cumque optio pariatur dicta numquam fugit iusto. Distinctio, ducimus!</p>
+        </article>
+    </section>
 </body>
 </html>
