--- a/index.html
+++ b/index.html
@@ -27,5 +27,11 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam, sapiente. Possimus, sit similique! Itaque soluta accusamus distinctio dolore nemo, sint tempore cumque optio pariatur dicta numquam fugit iusto. Distinctio, ducimus!</p>
         </article>
     </section>
+    <section class="contact">
+        <h2>Contact Me</h2>
+        <p>email: dustin2400@hotmail.com</p>
+        <br/>
+        <p>phone: 512-502-4174</p>
+    </section>
 </body>
 </html>
