--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
     <header>
         <h1 class="intro">Hey, I'm Dustin.</h1>
         <h1 class="neon">Innovative Intuitive Inspirational</h1>
+        <nav>
+            <a href="#works">Works</a>
+            <a href="#about-me">About Me</a>
+            <a href="#contact">Contact</a>
+        </nav>
     </header>
-    <section class="works">
+    <section class="works" id="works">
         <h2>Works</h2>
         <div class="works-container">
             <a href="https://dustin2400.github.io/run-buddy/" alt="Run Buddy" class="full run-buddy">RUN BUDDY</a>
@@ -20,14 +25,16 @@
             <a href="#" alt="macolm-esque" class="half malcolm-esque">Malcolm-esque</a>
         </div>
     </section>
-    <section class="about-me">
-        <img id="ya-boy" src="./assets/images/ya-boy.jpg" alt="Dustin" />
-        <article>
+    <section class="about-me" id="about-me">
+        <div class="about-ya-boy">
+            <img id="ya-boy" src="./assets/images/ya-boy.jpg" alt="Dustin" />
+        </div>
+        <div class="about-text">
             <h2>About Me</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam, sapiente. Possimus, sit similique! Itaque soluta accusamus distinctio dolore nemo, sint tempore cumque optio pariatur dicta numquam fugit iusto. Distinctio, ducimus!</p>
-        </article>
+        </div>
     </section>
-    <section class="contact">
+    <section class="contact" id="contacts">
         <h2>Contact Me</h2>
         <p>email: dustin2400@hotmail.com</p>
         <br/>
