add about me text

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="about-text">
             <h2>About Me</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam, sapiente. Possimus, sit similique! Itaque soluta accusamus distinctio dolore nemo, sint tempore cumque optio pariatur dicta numquam fugit iusto. Distinctio, ducimus!</p>
+            <p>I am an outgoing passionate developer with B.A. in History and Classics from Texas A&M University. A former teacher, I tutor privately and occasionally instruct classes on solving Rubik's cubes. I also enjoy making music and writing.</p>
         </div>
     </section>
     <section class="contact" id="contacts">
