add about me text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="works-container">
             <a href="https://dustin2400.github.io/run-buddy/" alt="Run Buddy" class="full run-buddy">RUN BUDDY</a>
             <a href=" https://dustin2400.github.io/Horiseon/" alt="horiseon" class="half horiseon">Hori<span class="seo">seo</span>n</a>
-            <a href="#" alt="macolm-esque" class="half malcolm-esque">Malcolm-esque</a>
+            <a href="https://dustin2400.github.io/Malcolm-esque/" alt="macolm-esque" class="half malcolm-esque">Malcolm-esque</a>
         </div>
     </section>
     <section class="about-me" id="about-me">
@@ -34,7 +34,7 @@
             <p>I am an outgoing passionate developer with B.A. in History and Classics from Texas A&M University. A former teacher, I tutor privately and occasionally instruct classes on solving Rubik's cubes. I also enjoy making music and writing.</p>
         </div>
     </section>
-    <section class="contact" id="contacts">
+    <section class="contact" id="contact">
         <h2>Contact Me</h2>
         <p>email: dustin2400@hotmail.com</p>
         <br/>
