--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1 class="intro">Hey, I'm Dustin.</h1>
+        <h1 class="intro">Hey, I'm Dustin</h1>
         <h1 class="neon">Innovative Intuitive Inspirational</h1>
         <nav>
             <a href="#works">Works</a>
@@ -23,6 +23,7 @@
             <a href="https://dustin2400.github.io/run-buddy/" alt="Run Buddy" class="full run-buddy">RUN BUDDY</a>
             <a href=" https://dustin2400.github.io/Horiseon/" alt="horiseon" class="half horiseon">Hori<span class="seo">seo</span>n</a>
             <a href="https://dustin2400.github.io/Malcolm-esque/" alt="macolm-esque" class="half malcolm-esque">Malcolm-esque</a>
+            <a href="https://dustin2400.github.io/lyrical-ta/" alt="lyrical-ta" class="full lyrical-ta">Lyrical TA</a>
         </div>
     </section>
     <section class="about-me" id="about-me">
