--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <section class="works" id="works">
         <h2>Works</h2>
         <div class="works-container">
-            <a href="https://dustin2400.github.io/run-buddy/" alt="Run Buddy" class="full run-buddy">RUN BUDDY</a>
-            <a href=" https://dustin2400.github.io/Horiseon/" alt="horiseon" class="half horiseon">Hori<span class="seo">seo</span>n</a>
+            <a href="https://mybrary2400.herokuapp.com/" alt="MyBrary" class="full MyBrary">MyBrary</a>
+            <a href="https://the-technocracy.herokuapp.com/" alt="The Technocracy" class="half the-technocracy">The<br>Technocracy</a>
             <a href="https://dustin2400.github.io/Malcolm-esque/" alt="macolm-esque" class="half malcolm-esque">Malcolm-esque</a>
             <a href="https://dustin2400.github.io/lyrical-ta/" alt="lyrical-ta" class="full lyrical-ta">Lyrical TA</a>
         </div>
