added weather dashboard removed malcolm-esque

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="works-container">
             <a href="https://mybrary2400.herokuapp.com/" alt="MyBrary" class="full MyBrary">MyBrary</a>
             <a href="https://the-technocracy.herokuapp.com/" alt="The Technocracy" class="half the-technocracy">The<br>Technocracy</a>
-            <a href="https://dustin2400.github.io/Malcolm-esque/" alt="macolm-esque" class="half malcolm-esque">Malcolm-esque</a>
+            <a href="https://dustin2400.github.io/weather-dashboard/" alt="Weather Dashboard" class="half weather-dashboard">Weather<br>Dashboard</a>
             <a href="https://dustin2400.github.io/lyrical-ta/" alt="lyrical-ta" class="full lyrical-ta">Lyrical TA</a>
         </div>
     </section>
